# optic

./: Cargo.toml  package.json
.github/workflows/: develop-binaries.yml
workspaces/diff-engine/: Cargo.toml  package.json
workspaces/diff-engine/cli/: Cargo.toml
workspaces/diff-engine/cli/src/: main.rs
workspaces/diff-engine/src/events/: http_interaction.rs
workspaces/diff-engine/tests/: bug-scenarios.rs  e2e-scenarios.rs
workspaces/diff-engine/wasm/: Cargo.toml  index.js  test.js
workspaces/diff-engine/wasm/src/: lib.rs
workspaces/domain-rust/: Cargo.toml  README.md  package.json  webpack.plugin.js
workspaces/domain-rust/lib/: index.js
workspaces/domain-rust/src/: events.rs  lib.rs  macros.rs
workspaces/domain-rust/src/aggregate/: mod.rs  requests.rs  rfc.rs  shape.rs
workspaces/domain-rust/src/events/: mod.rs  requests.rs  rfc.rs  shape.rs
workspaces/domain-rust/src/js/: mod.rs
workspaces/domain-rust/src/queries/: mod.rs  requests.rs
workspaces/domain-rust/src/state/: mod.rs  requests.rs  shape.rs
workspaces/ui/: .env  .env.development  package.json
workspaces/ui/config/: webpack.config.js
workspaces/ui/src/: routes.js
workspaces/ui/src/components/docs-rust/: DocsPage.js
