[package]
name = "optic_diff_engine"
version = "0.1.0"
authors = ["Jaap Rood <jaap@jaaprood.nl>"]
edition = "2018"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["streams"]
streams = ["futures", "tokio", "tokio-util"]

[dependencies]
avro-rs = "~0.11.0"
base64 = "0.12.3"
bytes = "0.5.6"
cqrs-core = "0.2.2"
futures = { version = "0.3.5", optional = true }
petgraph = "0.5.1"
protobuf = "2.17.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.57"
tokio = { version = "~0.2.22", features = ["full"], optional = true } 
tokio-util = { version = "0.3.1", features = ["codec"], optional = true }

[dev-dependencies]
insta = "0.16.1"
petgraph-evcxr = "*"

[build-dependencies]
protobuf-codegen-pure = "2.17.0"