[package]
name = "optic_diff_wasm"
version = "0.1.0"
authors = ["Jaap Rood <jaap@jaaprood.nl>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[workspace] # Creating a new workspace prevents this from being built as part of the pre-built binaries

[dependencies]
wasm-bindgen = "0.2.68"
serde-wasm-bindgen = "0.1.3"

[dependencies.optic_diff_engine]
path = "../" 
default-features = false
